fix: APP-949, add scrollbar to rooms and fix test

--- a/components/PostingLocation/SuggestionsRooms/styles/styles.less
+++ b/components/PostingLocation/SuggestionsRooms/styles/styles.less
@@ -59,7 +59,9 @@
     padding: 0;
     box-sizing: border-box;
     border-radius: 0.125rem;
-
+    max-height: 320px;
+    overflow-y: auto;
+    
     .filter-box {
       width: 100%;
       min-height: @filter-box-height;
